css/style.css
/* ... */
@-webkit-keyframes pulse-ring {
  0% {
    -webkit-transform: scale(0.33);
            transform: scale(0.33);
  }
  80%, 100% {
    opacity: 0;
  }
}

@keyframes pulse-ring {
  0% {
    -webkit-transform: scale(0.33);
            transform: scale(0.33);
  }
  80%, 100% {
    opacity: 0;
  }
}
@-webkit-keyframes pulse-dot {
  0% {
    -webkit-transform: scale(0.8);
            transform: scale(0.8);
  }
  50% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
  100% {
    -webkit-transform: scale(0.8);
            transform: scale(0.8);
  }
}
@keyframes pulse-dot {
  0% {
    -webkit-transform: scale(0.8);
            transform: scale(0.8);
  }
  50% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
  100% {
    -webkit-transform: scale(0.8);
            transform: scale(0.8);
  }
}

.arrowAnim {
/*   width: 100vw;
  height: 100vh; */
  display: flex;
  justify-content: center;
  align-items: center;

}

.right{
  transform: rotate(-180deg);
}

.down {
  transform: rotate(-90deg);
}

.up {
  transform: rotate(-270deg);
}

.arrow {

  border: 1.5vw solid;
  border-color: orange transparent transparent orange;
  transform: rotate(-45deg);

}


.arrowSliding-left {
  position: absolute;
  -webkit-animation: slide-left 2s linear infinite;
          animation: slide-left 2s linear infinite;
}

.delay1 {
  -webkit-animation-delay: 0.5s;
    animation-delay: 0.5s;
}
.delay2 {
  -webkit-animation-delay: 1s;
    animation-delay: 1s;
}
.delay3 {
  -webkit-animation-delay: 1.5s;
    animation-delay: 1.5s;
}

@-webkit-keyframes slide-left {
    0% { opacity:0; transform: translateX(9vw); }
   20% { opacity:1; transform: translateX(6vw); }
   80% { opacity:1; transform: translateX(-6vw); }
  100% { opacity:0; transform: translateX(-9vw); }
}
@keyframes slide-left {
    0% { opacity:0; transform: translateX(9vw); }
   20% { opacity:1; transform: translateX(6vw); }
   80% { opacity:1; transform: translateX(-6vw); }
  100% { opacity:0; transform: translateX(-9vw); }
}

#map {
  position:absolute;
  left: -220px;
  bottom: 50px;
  visibility: visible;
  width: 220px;
  height: 220px;
  background-color: #333;
  background-color: rgb(58,68,84);
  background-color: rgba(58,68,84,0.8);
  margin-left: 0;
  -webkit-transition: margin-left 0.5s ease-in-out;
  transition: margin-left 0.5s ease-in-out;
  background-image: url(../img/map.png);
  background-repeat: no-repeat;
  border: 4px solid black;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: none;
}

.mobile #map{
  background-color: transparent;
}
#map.enabled {
  margin-left: 220px;
}
@media (max-height: 540px) {
  #map {
    margin-left: 0px !important;
  }
}

#point {
    position: absolute;
}

.visited {

    color: green;
    position: relative;
    top: -20px;
    left: 30px;
}

.locus0{
  bottom: 0px;
  left: 50px;
}
.locus1{
  bottom: 0px;
  left: 10px;
  transform: rotate(90deg)
}
.locus2{
  bottom: 50px;
  left: 55px;
}
.locus3{
  bottom: 95px;
    left: 55px;
}
.locus4{
  bottom: 86px;
  left: 130px;
  transform: rotate(-90deg)
}
.locus5{
  bottom: 86px;
  left: 170px;
}
.locus6{
  bottom: 155px;
  left: 175px;
  transform: rotate(-90deg);
}
.locus7{
  bottom: 155px;
  left: 200px;
  transform: rotate(-90deg);
}

.vr-button {
  position: absolute;
  bottom: 10px;
  right: 10px;
  background-color: black;

  font-family: Helvetica, Arial, sans-serif;
  font-size: 16px;
  padding: 12px;
  color: white;
}

#enter-vr {
  cursor: pointer;
  font-size: .9em;
  padding: .5em 2em;
  background-color: #25aae1;
  border: 2px solid #25aae1;
  color: #fff;
  border-radius: 5px;
 }

#enter-vr:hover {
  background-color: #51BBE7;
  border: 2px solid #51BBE7;
}

#no-vr {
  cursor: default;
}

.info-hotspot-image{
  margin-top: 15px;
  max-width: 100%;
}

